--- a/MyShoppingApp.WebApp/Components/Layout/NavMenu.razor
+++ b/MyShoppingApp.WebApp/Components/Layout/NavMenu.razor
@@ -24,6 +24,10 @@
             <span class="bi bi-shop" aria-hidden="true"></span>
             <span>Stores</span>
         </NavLink>
+        <NavLink class="nav-link d-flex align-items-center text-white gap-2" href="/users" title="Users">
+            <span class="bi bi-people-fill" aria-hidden="true"></span>
+            <span>Users</span>
+        </NavLink>
     </nav>
 </div>
 
