Add Group management to navigation and backend: Added 'Groups' link to main navigation menu, registered Group ViewModels in Program.cs, implemented group member CRUD and retrieval in GroupService, added GetMembersAsync to IGroupService, added GroupMemberDbModel and Groups UI folder

--- a/MyShoppingApp.WebApp/Components/Layout/NavMenu.razor
+++ b/MyShoppingApp.WebApp/Components/Layout/NavMenu.razor
@@ -28,6 +28,10 @@
             <span class="bi bi-people-fill" aria-hidden="true"></span>
             <span>Users</span>
         </NavLink>
+        <NavLink class="nav-link d-flex align-items-center text-white gap-2" href="/groups" title="Groups">
+            <span class="bi bi-people" aria-hidden="true"></span>
+            <span>Groups</span>
+        </NavLink>
     </nav>
 </div>
 
