--- a/MyShoppingApp.WebApp/Stores/StoreList.razor
+++ b/MyShoppingApp.WebApp/Stores/StoreList.razor
@@ -26,6 +26,7 @@ else if (ViewModel.Stores.Any())
                 <th>Name</th>
                 <th>Description</th>
                 <th>Group</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
@@ -35,6 +36,9 @@ else if (ViewModel.Stores.Any())
                     <td>@store.Name</td>
                     <td>@store.Description</td>
                     <td>@store.GroupId</td>
+                    <td>
+                        <a class="btn btn-sm btn-secondary" href="/stores/edit/@store.Id">Edit</a>
+                    </td>
                 </tr>
             }
         </tbody>
