Redesign Home page with greeting and large section links for Stores, Users, and Groups

--- a/MyShoppingApp.WebApp/Components/Pages/Home.razor
+++ b/MyShoppingApp.WebApp/Components/Pages/Home.razor
@@ -2,6 +2,24 @@
 
 <PageTitle>Home</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<div class="container py-5 text-center">
+    <h1 class="display-4 mb-4">Welcome to My Shopping App!</h1>
+    <p class="lead mb-5">Manage your stores, users, and groups with ease.</p>
+    <div class="row justify-content-center gy-4">
+        <div class="col-12 col-md-4">
+            <a class="btn btn-primary btn-lg w-100 py-4 fs-3" href="/stores">
+                <span class="bi bi-shop me-2"></span>Stores
+            </a>
+        </div>
+        <div class="col-12 col-md-4">
+            <a class="btn btn-success btn-lg w-100 py-4 fs-3" href="/users">
+                <span class="bi bi-people-fill me-2"></span>Users
+            </a>
+        </div>
+        <div class="col-12 col-md-4">
+            <a class="btn btn-info btn-lg w-100 py-4 fs-3 text-white" href="/groups">
+                <span class="bi bi-people me-2"></span>Groups
+            </a>
+        </div>
+    </div>
+</div>
