--- a/MyShoppingApp.WebApp/_Imports.razor
+++ b/MyShoppingApp.WebApp/_Imports.razor
@@ -9,3 +9,4 @@
 @using MyShoppingApp.WebApp
 @using MyShoppingApp.WebApp.Components
 @using MyShoppingApp.WebApp.Components.Core
+@using MyShoppingApp.WebApp.Items
